@@ -32,7 +32,6 @@ import java.security.spec.AlgorithmParameterSpec;
 import java.security.spec.KeySpec;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
-import java.util.Properties;
 
 import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
@@ -44,6 +43,8 @@ import javax.crypto.spec.PBEParameterSpec;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.core.runtime.Platform;
+
+import com.sun.org.apache.xerces.internal.impl.dv.util.Base64;
 
 public class BridgePointDemoEncryptor {
     private Cipher ecipher;
@@ -110,7 +111,7 @@ public class BridgePointDemoEncryptor {
             byte[] enc = ecipher.doFinal(utf8);
 
             // Encode bytes to base64 to get a string
-            return new sun.misc.BASE64Encoder().encode(enc);
+            return Base64.encode(enc);
         } catch (javax.crypto.BadPaddingException e) {
         } catch (IllegalBlockSizeException e) {
         } catch (UnsupportedEncodingException e) {
@@ -121,7 +122,7 @@ public class BridgePointDemoEncryptor {
     protected String decrypt(String str) {
         try {
             // Decode base64 to get bytes
-            byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer(str);
+            byte[] dec = Base64.decode(str);
 
             // Decrypt
             byte[] utf8 = dcipher.doFinal(dec);
@@ -131,7 +132,6 @@ public class BridgePointDemoEncryptor {
         } catch (javax.crypto.BadPaddingException e) {
         } catch (IllegalBlockSizeException e) {
         } catch (UnsupportedEncodingException e) {
-        } catch (java.io.IOException e) {
         }
         return null;
     }
